dlstreamer int8 support
